--- a/minerals_clicker/assets/css/style.css
+++ b/minerals_clicker/assets/css/style.css
@@ -1,103 +1,109 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
 
-body{
-    position: relative;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: azure;
-    width: 100%;
-    height: 100vh;
-}
-
 a{
     text-decoration: none;
 }
-
-.non{
-    background-color: rgb(146, 18, 18);
-}
-
-.bouton_non{
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 20px 35%;
-    border-radius: 15px;
-    background-color: rgb(146, 18, 18);
-    color: azure;
+body{
+    position: relative;
+    background-color: bisque;
+    height: 100vh;
     width: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    overflow: hidden;
 }
 
-#info_minerais{
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 20%;
-    height: 60px;
-}
-
-#nombre_minerais{
+#minerai_boite{
     position: absolute;
     top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-#nombre_minerais_entier{
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-#nombre_minerais_par_seconde{
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-#minerais_cliquable{
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 450px
-}
-
-#amelioration_minerais_cliquable{
-    position: absolute;
-    top: 75%;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    justify-content: space-between;
+    left: 0;
     width: 60%;
+    height: 100vh;
 }
-
-h1{
-    font-weight: 600;
+#info_minerais{
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: center;
+    padding: 10% 0;
+    height: 35vh;
+    text-align: center;
+}
+#info_minerais h1{
+    width: 100%;
     font-size: 2rem;
-    color: rgb(56, 207, 207);
+    font-weight: 700;
+    padding: 5px 0;
 }
-
-h2{
+#info_minerais h2{
+    width: 100%;
+    font-size: 1.7rem;
     font-weight: 500;
-    font-size: 1.4rem;
+    padding: 5px 0;
 }
-
-h3{
-    font-weight: 300;
-    font-size: 1.2rem;
+#info_minerais h3{
+    width: 100%;
+    font-size: 1.3rem;
+    font-weight: 500;
+    padding: 5px 0;
 }
-
-.btn_boite{
-    height: 100%;
-    width: 30%;
+#minerais_cliquable{
+    height: 65vh;
+}
+#minerais_cliquable a{
+    display: flex;
+    justify-content: center;
+}
+#minerais_cliquable img{
+    width: 60%;
+    transition: 0.2s;
+}
+#minerais_cliquable img:active{
+    transform: scale(0.8);
+}
+#btn_boite{
     position: absolute;
-    top: 0px;
-    right: 0px;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    top: 0;
+    right: 0;
+    width: 30%;
+    height: 100vh;
+}
+#boutique{
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 0 20px;
+    font-size: 1.7rem;
+    font-weight: 700;
+}
+.btn_boite_interieur{
+    padding: 80px 20px 0;
+}
+.btn_amelioration{
+    background-color: #dcdce4;
+    width: 100%;
+    height: 80px;
+    border-radius: 8px;
+    margin: 10px 0;
+}
+.btn_amelioration:hover{
+    background-color: #cce4e7;
+    cursor: pointer;
+}
+.btn_amelioration h4{
+    padding: 15px 15px 0;
+    color: rgb(98, 92, 86);
+}
+.cout_flex{
+    display: flex;
+    align-items: center;
+    padding: 5px 15px;
+}
+.cout_flex p{
+    color: aliceblue;
+    font-weight: 600;
+}
+.cout_flex img{
+    width: 30px;
 }
