--- a/minerals_clicker/assets/css/style.css
+++ b/minerals_clicker/assets/css/style.css
@@ -49,17 +49,14 @@ body{
 }
 #minerais_cliquable{
     height: 65vh;
-}
-#minerais_cliquable a{
-    display: flex;
-    justify-content: center;
+    text-align: center;
 }
 #minerais_cliquable img{
     width: 60%;
     transition: 0.2s;
 }
 #minerais_cliquable img:active{
-    transform: scale(0.8);
+    transform: scale(0.9);
 }
 #btn_boite{
     position: absolute;
@@ -103,16 +100,23 @@ body{
 .cout_flex p{
     color: aliceblue;
     font-weight: 600;
+    padding-left: 5px;
 }
 .cout_flex img{
     width: 30px;
 }
-.nombre_au_clique_css{
+.minerais_de_charbon{
     width: 30px;
     height: 30px;
     position: fixed;
-    background-image: url("../img/+1.png");
+    background-image: url("../img/charbon.png");
     background-size: 100%;
     background-repeat: no-repeat;
-    z-index: 100000000000;
+    pointer-events: none;
+}
+.conteneur_nb_clique{
+    font-weight: 500;
+    font-size: 1.1rem;
+    position: fixed;
+    pointer-events: none;
 }
